--- a/app/views/apply/index.html.erb
+++ b/app/views/apply/index.html.erb
@@ -7,7 +7,7 @@
   <span class="step-number">1</span> Choose a Program
 </div>
 
-<%= render partial: 'program', locals: { sub_title: "On Campus | Immersive | 8 weeks | 12,000 NPR", title: "TECHRISE Core Immersive", 
+<%= render partial: 'program', locals: { sub_title: "Immersive | 8 weeks | 12,000 NPR", title: "TECHRISE Core Immersive", 
         description: "Learn to become a web developer through our immersive 8 week program. Have the full experience of working with a personal mentor twice a week, and attending extra workshops every other week to boost up your skills for your career. Our innovative platform combines an online curriculum and a strong community that is always there to help accelerate your path to becoming a professional web developer.",
         detail_link: immersive_path, apply_link: apply_immersive_path } %>
 
