--- a/app/views/static_pages/immersive.html.erb
+++ b/app/views/static_pages/immersive.html.erb
@@ -7,6 +7,9 @@
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <h1>Immersive Program Highlights</h1> 
+
+        <p class="program-highlights-details">Immersive | 8 weeks | 12,000 NPR</p>
+
         <p class="program-highlights-description">
           TECHRISE focuses on maximizing the student's learning progress and providing various opportunities.
         </p>  
@@ -138,7 +141,7 @@
       <div class="col-md-8">
         <h3>Personalized mentor sessions</h3>
         <p>
-          Get one-on-one mentorship from your personalized mentor twice a week. Closely working with your mentor will help you overcome challenges quickly and will accelerate your path to becoming a web developer. Other than mentor sessions, we have review sessions every other week to make sure that you understand all of the concepts.
+          Receive 1 on 1 mentorship from your personalized mentor twice a week. Closely working with your mentor will help you overcome challenges quickly and will accelerate your path to becoming a web developer. Other than mentor sessions, we have review sessions every other week to make sure that you understand all of the concepts.
         </p>
       </div>
     </div>
@@ -148,9 +151,9 @@
         <%= image_tag 'details/graduate.png' %>
       </div>
       <div class="col-md-8">
-        <h3>Work on real world projects</h3>
+        <h3>Opportunities to work on real projects</h3>
         <p>
-          Gain experience working on real live projects from actual companies and organizations. Using collaborative tools to work on a team would give you the experience and skills necessary to become a good developer.
+          If you progress quickly through the lessons and demonstrate a great understanding, we may provide opportunities for you to gain experience working on real projects from actual companies and organizations. Using collaborative tools to work on a team will give you the experience and skills necessary to become a good developer.
         </p>
       </div>
     </div>
@@ -199,14 +202,14 @@
         <div class="col-xs-12 col-md-4">
           <h4>Project Based Learning</h4>
           <p>
-            Build real web applications to build practical skills and build a portfolio.
+            Build real web applications to develop practical skills and create a portfolio of projects.
           </p>
         </div>
 
         <div class="col-xs-12 col-md-4">
           <h4>Ask Questions Anytime</h4>
           <p>
-            Clarify any questions you might have by asking them at anytime. TECHRISE mentors will try to respond as quickly as possible.
+            Clarify any questions you might have by asking them anytime. TECHRISE mentors will try to respond as quickly as possible.
           </p>
         </div>
       </div><!-- row -->
@@ -214,9 +217,29 @@
   </div><!-- container -->
 </section>
 
+<!-- ******Steps Section****** --> 
+<section class="steps section">
+    <div class="container">
+        <h2 class="title text-center">3 Simple Steps to join TECHRISE Core Immersive</h2>
+        <div class="row">
+             <div class="step text-center col-md-4 col-sm-4 col-xs-12">
+                 <h3 class="title"><span class="number">1</span><br /><span class="text">Sign up for Pre-work</span></h3>
+                 <p>
+                  To get join TECHRISE Core Immersive, sign up for pre-work down below.
+                 </p>
+             </div><!--//step-->
+             <div class="step text-center col-md-4 col-sm-4 col-xs-12">
+                 <h3 class="title"><span class="number">2</span><br /><span class="text">Complete Pre-work</span></h3>
+                 <p>Once you sign up, you will have 4 days to complete a series of assignments. If you complete all of these assignments on time, you will be called in for an admission interview.</p>
+             </div><!--//step-->
+             <div class="step text-center col-md-4 col-sm-4 col-xs-12">
+                 <h3 class="title"><span class="number">3</span><br /><span class="text">Start Your Coding Career</span></h3>
+                 <p>From here, you'll be skyrocketing. Build projects, have a personal mentor, learn from peers, and become a successful web developer.</p>
+             </div><!--//step-->
+        </div><!--//row-->
+        
+        <div class="text-center"><%= link_to 'Apply for TECHRISE Core Immersive', apply_immersive_path, class: 'btn btn-cta btn-cta-primary' %></div>
+        
+    </div><!--//container-->        
+</section><!--//steps-->
 
-
-<h2>Pre-work</h2>
-<p>
-  In order to keep our Core community high quality and motivated, you will have to complete the pre-work before being admitted into this stream. It is not necessary for you to have any prior experience coding. The pre-work expires in 4 days after signing up. 
-</p>
