--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -23,6 +23,8 @@
 
 <div class="sections-wrapper">   
 
+  <%= render 'comparison_chart' %>
+
   <!-- ******Why Section****** -->
   <section id="why" class="section why">
       <div class="container">
