--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -31,14 +31,14 @@
                   <li>1 Month of Training (Extendible)</li>
                   <li>Learn Completely Online</li>
                   <li>Learn at your own pace</li>                  
-                  <li>Access to Online Forum and Community</li>                  
+                                    
                 </ul>
               </div><!-- col-xs-12 col-md-6 -->
 
               <div class="col-xs-12 col-md-6">
                 <ul>
                   <li>Online Mentor Sessions</li>
-                  <li>Lifetime Access to Curriculum</li>
+                  <li>Access to Online Forum and Community</li>
                   <li>Build Real-World Web Applications</li>                  
                 </ul>
               </div><!-- col-xs-12 col-md-6 -->
@@ -76,9 +76,10 @@
             <div class="row">
               <div class="col-xs-12 col-md-6">
                 <ul>
+                  <li>2 Months of Intensive Training</li>
                   <li>Access to Online Forum and Community</li>
                   <li>Lifetime Access to Curriculum</li>
-                  <li>Guest speaker events, workshops and review sessions</li>                  
+                  <li>Events, workshops and review sessions</li>                  
                 </ul>
               </div><!-- col-xs-12 col-md-6 -->
 
