--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -15,7 +15,7 @@
 
         <h1 class="title">Become a Web Developer in 2 Months<br>Experience The New Way of Learning</h2>
         <p class="intro">
-          An innovative Learning Platform combining 1-on-1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
+          An innovative Learning Platform combining 1 on 1 mentor training, project-based learning, and a friendly student community that will accelerate your path to becoming a web developer.
         </p>
         <p><a class="btn btn-cta btn-cta-primary" href="/apply">Start Your Web Development Career</a></p>
     </div><!--//container-->
