--- a/app/assets/stylesheets/apply.scss
+++ b/app/assets/stylesheets/apply.scss
@@ -168,7 +168,8 @@
 
   .explore-programs-title {
     color: #ec6952;
-    font-weight: 900;
+    font-weight: 700;
+    font-family: 'Titillium web';
   }
 
   .explore-programs-subtitle {
@@ -212,44 +213,19 @@
       li {
         margin-top: 10px;
         margin-bottom: 10px;
+        text-indent: -15px;
       }
       li:before {
-        content: '';
-        display: inline-block;
-        height: 15px;
-        width: 15px;
-        background-image: url(details/success.png);
-        background-size: contain;
-        background-repeat: no-repeat;
-        margin-left: -30px;
-        margin-right: 15px;
+
+        content: "\f0da";
+        font-family: FontAwesome;
+        font-style: normal;
+        font-weight: normal;
+        text-decoration: inherit;
+        margin-right: 10px;
+        color: #ec6952;
       }  
     }    
-  }
-
-}
-
-.remote-box {
-  border: 1px solid #ff931e !important;
-
-  .program-box-title {
-    border-bottom: 1px solid #ff931e;
-    background: #ff931e;    
-  }
-
-  .explore-programs-title {
-    color: #ff931e;
-  }
-
-  .program-box-highlights {
-    border-bottom: 1px solid #ff931e;
-    text-align: center;
-    padding-bottom: 10px;
-    h3 {
-      font-size: 40px;
-      font-weight: 900;       
-      color: #ff931e;
-    }
   }
 
   small {
@@ -259,6 +235,37 @@
   }
 
 }
+
+.immersive-box {
+  border: 1px solid #253340 !important;
+
+  .program-box-title {
+    border-bottom: 1px solid #253340;
+    background: #253340;    
+  }
+
+  .explore-programs-title {
+    color: #253340;
+  }
+
+  .program-box-highlights {
+    border-bottom: 1px solid #253340;
+    text-align: center;
+    padding-bottom: 10px;
+    h3 {
+      font-size: 40px;
+      font-weight: 900;       
+      color: #253340;
+    }
+  }  
+
+}
+
+.immersive-box .program-box-details {
+    li:before {
+      color: #253340 !important;
+    }
+  }  
 
 .cta-box {
   margin-top: 60px;
