--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -5,7 +5,7 @@
 
     <div class="row">
       <div class="col-xs-12 col-md-6">      
-        <div class="explore-program-box remote-box">
+        <div class="explore-program-box">
           <div class="program-box-title">
             <h4>TECHRISE Core Remote</h4>
           </div><!-- program-box-title -->
@@ -53,7 +53,7 @@
       </div><!-- col-xs-12 col-md-6 -->
 
       <div class="col-xs-12 col-md-6">
-        <div class="explore-program-box">
+        <div class="explore-program-box immersive-box">
           <div class="program-box-title">
             <h4>TECHRISE Core Immersive</h4>
           </div><!-- program-box-title -->
@@ -76,7 +76,7 @@
             <div class="row">
               <div class="col-xs-12 col-md-6">
                 <ul>
-                  <li>2 Months of Intensive Training</li>
+                  <li>8 Weeks of Intensive Training</li>
                   <li>Access to Online Forum and Community</li>
                   <li>Lifetime Access to Curriculum</li>
                   <li>Events, workshops and review sessions</li>                  
