--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -44,7 +44,7 @@
               </div><!-- col-xs-12 col-md-6 -->
 
               <div class="extra-info">
-                <small>* 13% VAT shall be charged additional</small>
+                <small>* 13% VAT not included</small>
               </div>
             </div><!-- row -->
           </div><!-- program-box-details -->
