change lakshman post name

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -104,7 +104,7 @@
                             <figcaption class="info">
                                 <span class="name">Lakshman Basnet</span>
                                 <br />
-                                <span class="job-title">Business Development Manager</span>
+                                <span class="job-title">Business Development</span>
                                 
                             </figcaption>
                         </figure><!--//profile-->
