add ogimage for remote

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
-<%- title "#{@post.title} | TECHRISE - IT Coding Bootcamp in Nepal" %>
-<%- og_title "#{@post.title} | TECHRISE - IT Coding Bootcamp in Nepal" %>
+<%- title "#{@post.title} | TECHRISE - Coding Bootcamp in Nepal" %>
+<%- og_title "#{@post.title} | TECHRISE - Coding Bootcamp in Nepal" %>
 
 <!-- ******BLOG****** -->         
 <div class="blog-entry-wrapper"> 
