--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -1,6 +1,4 @@
-<!-- <h3>TECHRISE Core | Immersive | 14 work  - 12,000 NPR</h3>
-
-<h2>Accelerate your learning with 16 personal 1 on 1 mentor sessions</h2> -->
+<meta property="og:image" content="<%= asset_path 'details/techrise_remote.jpg' %>"/>
 
 <section class="program-highlights">
   <div class="container">
