--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -1,4 +1,4 @@
-<meta property="og:image" content="<%= asset_path 'details/techrise_remote.jpg' %>"/>
+<%- og_image "<%= asset_path 'details/techrise_remote.jpg' %>" %>
 
 <section class="program-highlights">
   <div class="container">
