--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -33,6 +33,8 @@
 
 <% unless @post.nil? || !@post.featured_image %>
   <meta property="og:image" content="<%= asset_path @post.featured_image %>"/>
+<% elsif content?(:og_image) %>
+  <meta property="og:image" content="<%= content_for(:og_image) %>"/>
 <% else %>
   <meta property="og:image" content="http://www.techrise.me<%= asset_path 'background/bg-header-1.1.jpg' %>"/>
 <% end %>
