--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -18,8 +18,8 @@
               </div><!-- col-xs-12 col-md-6 -->
 
               <div class="col-xs-12 col-md-6">
-                <h3>3,000 NPR</h3>
-                <h5>Tuition *</h5>
+                <h3>3,000 NPR</h3> 
+                <h5>Total Cost *</h5>               
               </div><!-- col-xs-12 col-md-6 -->
             </div><!-- row -->
           </div><!-- program-box-highlights -->
@@ -31,7 +31,7 @@
                   <li>1 Month of Training (Extendible)</li>
                   <li>Learn Completely Online</li>
                   <li>Learn at your own pace</li>                  
-                                    
+                  <li>All Courses Included</li>                                      
                 </ul>
               </div><!-- col-xs-12 col-md-6 -->
 
@@ -67,7 +67,7 @@
 
               <div class="col-xs-12 col-md-6">
                 <h3>12,000 NPR</h3>
-                <h5>Tuition</h5>
+                <h5>Total Cost</h5>
               </div><!-- col-xs-12 col-md-6 -->
             </div><!-- row -->
           </div><!-- program-box-highlights -->
@@ -87,7 +87,8 @@
                 <ul>
                   <li>Opportunities to work on real web development projects</li>
                   <li>Mentor sessions twice per week</li>
-                  <li>Build Real-World Web Applications</li>                 
+                  <li>Build Real-World Web Applications</li>  
+                  <li>All Courses Included</li>               
                 </ul>
               </div><!-- col-xs-12 col-md-6 -->
             </div><!-- row -->
