--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -1,4 +1,12 @@
-<%- og_image asset_path 'details/techrise_remote.jpg' %>
+<% set_meta_tags title: 'TECHRISE Core Remote Program',
+                 description: 'Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way.',
+                 keywords: 'Coding Bootcamp, Ruby on Rails, Ruby, Nepal, IT, Training',
+                 og: {
+                  url: request.original_url,
+                  title: "TECHRISE Core Remote Program | TECHRISE",
+                  image: "#{asset_path 'details/techrise_remote.jpg'}"
+                 } %>
+
 
 <section class="program-highlights">
   <div class="container">
