update meta tags

--- a/app/views/layouts/_meta.html.erb
+++ b/app/views/layouts/_meta.html.erb
@@ -1,15 +1,15 @@
-<%= display_meta_tags site: 'TECHRISE', reverse: true %>
-<% set_meta_tags title: 'Ruby on Rails Coding Bootcamp in Nepal',
-                 description: 'Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way.',
-                 keywords: 'Coding Bootcamp, Ruby on Rails, Ruby, Nepal, IT, Training',
-                 og: {
-                  type: "website",
-                  url: request.original_url,
-                  title: "Coding Bootcamp in Nepal | TECHRISE",
-                  image: "http://www.techrise.me#{asset_path 'background/bg-header-1.1.jpg'}",
-                  description: "Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way."
-                 } %>
-
+<%= display_meta_tags site: 'TECHRISE',
+                      reverse: true,
+                      title: 'Ruby on Rails Coding Bootcamp in Nepal',
+                      description: 'Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way.',
+                      keywords: 'Coding Bootcamp, Ruby on Rails, Ruby, Nepal, IT, Training',
+                      og: {
+                      type: "website",
+                      url: request.original_url,
+                      title: "Coding Bootcamp in Nepal | TECHRISE",
+                      image: "http://www.techrise.me#{asset_path 'background/bg-header-1.1.jpg'}",
+                      description: "Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way."
+                      } %>
 
 <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
