change meta tags

--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -4,7 +4,7 @@
                  og: {
                   url: request.original_url,
                   title: "TECHRISE Core Remote Program | TECHRISE",
-                  image: "#{asset_path 'details/techrise_remote.jpg'}"
+                  image: "#{asset_url 'details/techrise_remote.jpg'}"
                  } %>
 
 
