--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -1,5 +1,5 @@
 <% set_meta_tags title: 'TECHRISE Core Remote Program',
-                 description: 'Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way.',
+                 description: 'Learn web development anytime, anywhere, for an affordable price with TECHRISE Core Remote. Learn web development with a focus on Ruby on Rails through 1 on 1 mentor sessions, project based learning, and a supportive community to guide you through the way.',
                  keywords: 'Coding Bootcamp, Ruby on Rails, Ruby, Nepal, IT, Training',
                  og: {
                   url: request.original_url,
