--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,8 @@
                  og: {
                   url: request.original_url,
                   title: "#{@post.title} | TECHRISE - Coding Bootcamp in Nepal",
-                  image: "#{asset_path @post.featured_image}"
+                  image: "#{asset_path @post.featured_image}",
+                  description: 'Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way.'
                  } %>
 
 <!-- ******BLOG****** -->         
