omg i keep on updating the wrong page

--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -4,7 +4,8 @@
                  og: {
                   url: request.original_url,
                   title: "TECHRISE Core Remote Program | TECHRISE",
-                  image: "#{asset_url 'details/techrise_remote.jpg'}"
+                  image: "#{asset_url 'details/techrise_remote.jpg'}",
+                  description: 'Learn web development anytime, anywhere, for an affordable price with TECHRISE Core Remote. Learn web development with a focus on Ruby on Rails through 1 on 1 mentor sessions, project based learning, and a supportive community to guide you through the way.',
                  } %>
 
 
