add call to actions on details pages

--- a/app/views/static_pages/_comparison_chart.html.erb
+++ b/app/views/static_pages/_comparison_chart.html.erb
@@ -4,97 +4,101 @@
     <h1 class="text-center explore-programs-subtitle">Choose the best program for you</h1>
 
     <div class="row">
-      <div class="col-xs-12 col-md-6">      
-        <div class="explore-program-box">
-          <div class="program-box-title">
-            <h4>TECHRISE Core Remote</h4>
-          </div><!-- program-box-title -->
+      <div class="col-xs-12 col-md-6">
+        <a href="/remote" style="color: inherit; text-decoration: none;">
+          <div class="explore-program-box">
+            <div class="program-box-title">
+              <h4>TECHRISE Core Remote</h4>
+            </div><!-- program-box-title -->
 
-          <div class="program-box-highlights">
-            <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <h3>4</h3>
-                <h5>Mentor Sessions</h5>
-              </div><!-- col-xs-12 col-md-6 -->
+            <div class="program-box-highlights">
+              <div class="row">
+                <div class="col-xs-12 col-md-6">
+                  <h3>4</h3>
+                  <h5>Mentor Sessions</h5>
+                </div><!-- col-xs-12 col-md-6 -->
 
-              <div class="col-xs-12 col-md-6">
-                <h3>3,000 NPR</h3> 
-                <h5>Total Cost *</h5>               
-              </div><!-- col-xs-12 col-md-6 -->
-            </div><!-- row -->
-          </div><!-- program-box-highlights -->
+                <div class="col-xs-12 col-md-6">
+                  <h3>3,000 NPR</h3> 
+                  <h5>Total Cost *</h5>               
+                </div><!-- col-xs-12 col-md-6 -->
+              </div><!-- row -->
+            </div><!-- program-box-highlights -->
 
-          <div class="program-box-details">
-            <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <ul>
-                  <li>1 Month of Training (Extendible)</li>
-                  <li>Learn Completely Online</li>
-                  <li>Learn at your own pace</li>                  
-                  <li>All Courses Included</li>                                      
-                </ul>
-              </div><!-- col-xs-12 col-md-6 -->
+            <div class="program-box-details">
+              <div class="row">
+                <div class="col-xs-12 col-md-6">
+                  <ul>
+                    <li>1 Month of Training (Extendible)</li>
+                    <li>Learn Completely Online</li>
+                    <li>Learn at your own pace</li>                  
+                    <li>All Courses Included</li>                                      
+                  </ul>
+                </div><!-- col-xs-12 col-md-6 -->
 
-              <div class="col-xs-12 col-md-6">
-                <ul>
-                  <li>Online Mentor Sessions</li>
-                  <li>Access to Online Forum and Community</li>
-                  <li>Build Real-World Web Applications</li>                  
-                </ul>
-              </div><!-- col-xs-12 col-md-6 -->
+                <div class="col-xs-12 col-md-6">
+                  <ul>
+                    <li>Online Mentor Sessions</li>
+                    <li>Access to Online Forum and Community</li>
+                    <li>Build Real-World Web Applications</li>                  
+                  </ul>
+                </div><!-- col-xs-12 col-md-6 -->
 
-              <div class="extra-info">
-                <small>* 13% VAT not included</small>
-              </div>
-            </div><!-- row -->
-          </div><!-- program-box-details -->
+                <div class="extra-info">
+                  <small>* 13% VAT not included</small>
+                </div>
+              </div><!-- row -->
+            </div><!-- program-box-details -->
 
-        </div><!-- program-box -->
+          </div><!-- program-box -->
+        </a>
       </div><!-- col-xs-12 col-md-6 -->
 
       <div class="col-xs-12 col-md-6">
-        <div class="explore-program-box immersive-box">
-          <div class="program-box-title">
-            <h4>TECHRISE Core Immersive</h4>
-          </div><!-- program-box-title -->
+        <a href="/immersive" style="color: inherit; text-decoration: none;">
+          <div class="explore-program-box immersive-box">
+            <div class="program-box-title">
+              <h4>TECHRISE Core Immersive</h4>
+            </div><!-- program-box-title -->
 
-          <div class="program-box-highlights">
-            <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <h3>16</h3>
-                <h5>Mentor Sessions</h5>
-              </div><!-- col-xs-12 col-md-6 -->
+            <div class="program-box-highlights">
+              <div class="row">
+                <div class="col-xs-12 col-md-6">
+                  <h3>16</h3>
+                  <h5>Mentor Sessions</h5>
+                </div><!-- col-xs-12 col-md-6 -->
 
-              <div class="col-xs-12 col-md-6">
-                <h3>12,000 NPR</h3>
-                <h5>Total Cost</h5>
-              </div><!-- col-xs-12 col-md-6 -->
-            </div><!-- row -->
-          </div><!-- program-box-highlights -->
+                <div class="col-xs-12 col-md-6">
+                  <h3>12,000 NPR</h3>
+                  <h5>Total Cost</h5>
+                </div><!-- col-xs-12 col-md-6 -->
+              </div><!-- row -->
+            </div><!-- program-box-highlights -->
 
-          <div class="program-box-details">
-            <div class="row">
-              <div class="col-xs-12 col-md-6">
-                <ul>
-                  <li>8 Weeks of Intensive Training</li>
-                  <li>Access to Online Forum and Community</li>
-                  <li>Lifetime Access to Curriculum</li>
-                  <li>Events, workshops and review sessions</li>                  
-                </ul>
-              </div><!-- col-xs-12 col-md-6 -->
+            <div class="program-box-details">
+              <div class="row">
+                <div class="col-xs-12 col-md-6">
+                  <ul>
+                    <li>8 Weeks of Intensive Training</li>
+                    <li>Access to Online Forum and Community</li>
+                    <li>Lifetime Access to Curriculum</li>
+                    <li>Events, workshops and review sessions</li>                  
+                  </ul>
+                </div><!-- col-xs-12 col-md-6 -->
 
-              <div class="col-xs-12 col-md-6">
-                <ul>
-                  <li>Opportunities to work on real web development projects</li>
-                  <li>Mentor sessions twice per week</li>
-                  <li>Build Real-World Web Applications</li>  
-                  <li>All Courses Included</li>               
-                </ul>
-              </div><!-- col-xs-12 col-md-6 -->
-            </div><!-- row -->
-          </div><!-- program-box-details -->
+                <div class="col-xs-12 col-md-6">
+                  <ul>
+                    <li>Opportunities to work on real web development projects</li>
+                    <li>Mentor sessions twice per week</li>
+                    <li>Build Real-World Web Applications</li>  
+                    <li>All Courses Included</li>               
+                  </ul>
+                </div><!-- col-xs-12 col-md-6 -->
+              </div><!-- row -->
+            </div><!-- program-box-details -->
 
-        </div><!-- program-box -->
+          </div><!-- program-box -->
+        </a>
       </div><!-- col-xs-12 col-md-6 -->
 
       <div class="col-xs-12 col-md-6 col-md-offset-3">
