--- a/app/views/static_pages/immersive.html.erb
+++ b/app/views/static_pages/immersive.html.erb
@@ -17,7 +17,7 @@
 
         <span class="highlight-checkbox">16 Personal Mentor Sessions at the TECHRISE Campus</span>
         <span class="highlight-checkbox">Learn Full Stack Web Development by Building Real Applications</span>
-        <span class="highlight-checkbox">Ask questions and interact with community members</span>
+        <span class="highlight-checkbox">Ask questions and interact with community members</span>        
 
         <!-- <span class="highlight-checkbox">Workshops/Review Sessions</span>
         <span class="highlight-checkbox">Outside Speakers from the industry</span>
@@ -35,7 +35,12 @@
 
       <div class="col-xs-12 col-md-6">
         <%= image_tag 'details/desktop.png' %>
-        
+          
+        <div class="row">
+          <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+            <%= link_to 'Apply for TECHRISE Core Immersive', apply_immersive_path, class: 'btn btn-cta btn-cta-secondary center-block', style: 'margin-top: 30px;' %>
+          </div>
+        </div>
         
       </div><!-- col-xs-12 col-md-6 -->
     </div><!-- row -->
