--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -42,7 +42,7 @@
       <div class="col-xs-12 col-md-6">
         <%= image_tag 'details/video-chat.png' %>
         
-        
+        <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-secondary center-block' %>
       </div><!-- col-xs-12 col-md-6 -->
     </div><!-- row -->
   </div><!-- container -->
@@ -210,8 +210,15 @@
         <div class="col-xs-12">
           <p><small>* You can also extend your course at an additional 2,500 NPR per month.</small></p>
         </div>
+        
       </div><!-- row -->
     </div><!-- payment-details -->
+
+    <div class="row">
+      <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-4 col-md-offset-4">
+        <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-secondary center-block' %>
+      </div>
+    </div>
   </div><!-- container -->
 </section>
 
