--- a/app/views/static_pages/remote.html.erb
+++ b/app/views/static_pages/remote.html.erb
@@ -41,8 +41,13 @@
 
       <div class="col-xs-12 col-md-6">
         <%= image_tag 'details/video-chat.png' %>
-        
-        <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-secondary center-block' %>
+
+        <div class="row">
+          <div class="col-xs-12 col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
+            <%= link_to 'Apply for TECHRISE Core Remote', apply_remote_path, class: 'btn btn-cta btn-cta-secondary center-block', style: 'margin-top: 30px;' %>
+          </div>
+        </div>
+
       </div><!-- col-xs-12 col-md-6 -->
     </div><!-- row -->
   </div><!-- container -->
