add admin link on submissions

--- a/app/views/admin_dashboard/index.html.erb
+++ b/app/views/admin_dashboard/index.html.erb
@@ -4,7 +4,7 @@
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#statistics">STATS</a></li>
     <li><a data-toggle="tab" href="#logs">LOGS</a></li>
-    <li><a data-toggle="tab" href="/applicants">APPLICATIONS</a></li>
+    <li><a href="/applicants">APPLICANTS</a></li>
   </ul>
 
   <div class="tab-content">
