--- a/app/views/applicants/index.html.erb
+++ b/app/views/applicants/index.html.erb
@@ -36,7 +36,7 @@
 
         <%= link_to 'Admit Applicant', user_student_admissions_path(user_id: user.id), class: 'btn btn-sm btn-cta btn-cta-primary', data: { confirm: "Are you sure?"}, method: :post %>
 
-        <%= link_to 'Admin', edit_admin_admin_user_path(user.id), class: 'btn btn-sm btn-cta btn-cta-secondary' %>
+        <%= link_to 'Admin', edit_admin_user_path(user.id), class: 'btn btn-sm btn-cta btn-cta-secondary' %>
       </div><!-- btn-group -->
     </div><!-- mentee-panel -->
   </div>
