--- a/app/views/submissions/show.html.erb
+++ b/app/views/submissions/show.html.erb
@@ -33,7 +33,7 @@
 
       <% if current_user.admin %>
         <hr>  
-        <%= link_to 'Admin', edit_admin_admin_user_path(@submission.user_id), class: 'btn btn-sm btn-block btn-cta btn-cta-secondary' %>
+        <%= link_to 'Admin', edit_admin_user_path(@submission.user_id), class: 'btn btn-sm btn-block btn-cta btn-cta-secondary' %>
       <% end %>
     </div>
 
