--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<% set_meta_tags title: '#{@post.title}',
+<% set_meta_tags title: "#{@post.title}",
                  description: 'Become a Web Developer in 2 Months at TECHRISE with 1 on 1 mentor sessions, project based learning, and a friendly and supportive community to guide you through the way.',
                  og: {
                   url: request.original_url,
