--- a/app/views/applicants/index.html.erb
+++ b/app/views/applicants/index.html.erb
@@ -13,6 +13,7 @@
       <%= image_tag user.avatar, class: 'prof_pic_sm' %>
       <h3><%= user.name %></h3>
       <h5><%= user.email %></h5>
+      <h5><strong><%= user.package %></strong></h5>
       <h5><strong>Prework Start Date:</strong> <%= display_date user.try(:prework_start_time) %></h5>
       <h5><strong>Prework End Date:</strong> <%= display_date user.try(:prework_end_date) %></h5>
 
