--- a/app/views/ruby_lessons/lessons/lesson_2.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_2.html.erb
@@ -1,11 +1,49 @@
 <h1><%= title_for(RubyLesson, 1, 2) %></h1>
 
-<!-- 16:9 aspect ratio -->
-<div class="embed-responsive embed-responsive-16by9">
-  <iframe src="https://player.vimeo.com/video/173081820" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-</div>
+<p>
+  To get started with your Ruby journey, let's use Cloud9.
+</p>
+
+<p class="alert alert-warning">
+If you haven't activated your Cloud9 account yet or have not received an invitation from Cloud9, please let us know and we will invite you as soon as possible.
+</p>
 
 <p>
+  First, let's create a new container.
+</p>  
+
+<p>
+  Once you've signed in Cloud9, then you can create a workspace:
+</p>
+
+<%= image_tag 'ideator/c9_dashboard.png', class: 'screenshot' %>  
+
+<p>
+  Click on "Create New Workspace". This will take you to a new page where you can fill out information about your new project.
+</p>
+
+<p>
+  Enter "ruby_fundamentals" as the project name, and choose the Ruby template as shown below:
+</p>
+
+<%= image_tag 'ruby_lessons/setting_up.png', class: 'screenshot' %>
+
+<p>
+  Finally, click the "Create Workspace" button. Just like that, your Ruby environment has been created!
+</p>
+
+<p>
+  C9 creates a Ruby on Rails application (which you will be creating later on in your coursework) for you by default and generates a bunch of files. Don't worry about these files - you won't be touching those files for now.
+</p>  
+
+<%= image_tag 'ruby_lessons/warnings.png', class: 'screenshot' %>
+
+<p>
+  Awesome! Let's keep on going.
+</p>
+
+
+<!-- <p>
   The first resource that you will go through is <a href="https://www.codecademy.com/learn/ruby" target="_blank">Codecademy's Ruby Tutorials</a>. They do a great job in laying out the fundamentals and providing you with exercises so you can apply them quickly.
 </p>
 
@@ -28,5 +66,4 @@
   Happy coding!
 </p>
 
-<% @submission_form = true %>
-
+ -->
