--- a/app/views/ruby_lessons/lessons/lesson_1.html.erb
+++ b/app/views/ruby_lessons/lessons/lesson_1.html.erb
@@ -15,3 +15,8 @@
 <p>
   Enough talking, let's get coding!
 </p>
+
+<!-- 16:9 aspect ratio -->
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe src="https://player.vimeo.com/video/173081820" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+</div>
